# openxcom-mod-generator

./: .gitignore  .pre-commit-config.yaml  .releaserc  README.md  pyproject.toml
.github/workflows/: release.use-case.yaml  validate.use-case.yaml
scripts/: local-mod-release.sh
src/: .env  .env.sample  main.py
src/chat/: ask_for_origin_story.py  image_description.py
src/conversion/: convert_image_to_resource.py
src/dalle/: image_generation.py
src/gpt/: ask_for_dalle_prompt.py  ask_for_origin_story.py
src/image/: crop.py  paint_black_rectangle.py
src/modding/: add_ufopedia_entry.py  overwrite_installed_mod_files.py  translate_yaml.py
src/openxcom-generator/: entrypoint.py
src/openxcomgenerator/: main.py
src/utils/: dotenv.py  filesystem.py
